fix nav spacing

--- a/public/global.css
+++ b/public/global.css
@@ -31,10 +31,6 @@ img {
   height: auto;
 }
 
-p {
-  word-break: auto-phrase;
-}
-
 body {
   box-sizing: border-box;
   min-height: 100vh;
